# idj-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Alien.h  Assets.h  Bullet.h  Camera.h  CameraFollower.h  Component.h  Face.h  Game.h  GameObject.h  InputManager.h  Minion.h  Music.h  Rect.h  Resources.h  Sound.h  Sprite.h  State.h  TileMap.h  TileSet.h  Vec2.h
lib/: SDL_include.h
src/: Alien.cpp  Assets.cpp  Bullet.cpp  Camera.cpp  CameraFollower.cpp  Component.cpp  Face.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  Minion.cpp  Music.cpp  Rect.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  State.cpp  TileMap.cpp  TileSet.cpp  Vec2.cpp  main.cpp
test/: catch.hpp  tileMapTest.cpp
